# agent-poker

./: .gitignore  DOMAINS.md  GAME-SPEC.md  MARKETING.md  README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
bots/: api.mjs  bot-leroy.js  bot-leroy.mjs  bot-rival.mjs  bot-simple.js
examples/node/: llm-bot.ts  math-bot.ts  package-lock.json  package.json  simple-bot.ts
examples/python/: llm_bot.py  math_bot.py  simple_bot.py
frontend/: docs.html  index.html  profile.html  watch.html
sdk/node/: README.md  package-lock.json  package.json
sdk/node/src/: bot.ts  client.ts  index.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/agent_poker/: __init__.py  bot.py  client.py  types.py
src/: badges.ts  index.ts  table.ts
src/api/: auth.ts  routes.ts
src/engine/: deck.ts  evaluator.ts  game.ts
src/security/: collusion.ts  ratelimit.ts  sanitizer.ts
src/types/: index.ts
