[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-poker-sdk"
version = "0.1.0"
description = "Official Python SDK for Agent Poker — build AI poker agents in minutes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["mypy", "pytest"]
